--- a/build.xml
+++ b/build.xml
@@ -57,7 +57,6 @@
       </filterchain>      		
     </loadfile>
     <echo message="previous version tag = ${previousTag}"/>
-	
   </target>
 
   <target name="versionSource" depends="init" description="update the version in all java files">
@@ -79,9 +78,11 @@
       <include name="release.txt"/>
       <replacefilter token="${VERSION_NUMBER} (${VERSION_TYPE} ${VERSION_DATE})"/>
     </replace>
+
     <echo message="Replacing version tag ${previousTag} with ${versionTag} in all source files"/>
     <replace dir="${src}" value="${versionTag}">
       <include name="**/*.java"/>
+      <include name="**/package.html"/>
       <replacefilter token="${previousTag}"/>
     </replace>
   </target>
